Reactor initial port complete